ZORP_H = modules.h policy.h proxy.h proxystack.h \
	pyproxy.h \
	nfiptproxy-kernel.h \
	ipfiptproxy-kernel.h nfiptproxy-kernelv2.h \
	nfdynexpect-kernel.h\
	dimhash.h zorp.h sysdep.h \
	pysockaddr.h pystream.h \
	pycore.h \
	pyzasauth.h zasauth.h \
	satyr.h pysatyr.h \
	authprovider.h \
	tpsocket.h \
	szig.h \
	dispatch.h pydispatch.h attach.h connection.h pyattach.h \
	plugsession.h zpython.h \
	dgram.h pystruct.h pydict.h audit.h \
	ifmonitor.h proxygroup.h pyproxygroup.h \
	coredump.h notification.h linebalance.h \
	pybalance.h pyaudit.h timestamp.h idsconn.h \
	proxyssl.h proxysslhostiface.h proxycommon.h pyx509.h \
	bllookup.h pyblacklist.h \
	kzorp.h kzorp-kernel.h

pkgincludedir=$(includedir)/zorp
pkginclude_HEADERS = $(ZORP_H)
