
pkgdatadir = @datadir@/zorp/pylib/Zorp

pkgdata_DATA = Auth.py AuthDB.py Core.py Chainer.py Dispatch.py \
	Domain.py Listener.py Matcher.py NAT.py Proxy.py \
	Router.py Receiver.py Service.py Session.py SockAddr.py \
	Stream.py Zone.py Zorp.py __init__.py \
	Globals.py Cache.py Resolver.py Stack.py Config.py \
	KZorp.py Notification.py Keybridge.py \
	Pssl.py

EXTRA_DIST = $(pkgdata_DATA)
